# ha-babybuddy

./: .gitignore  README.md  hacs.json  pyproject.toml
.cursor/: mcp.json
.devcontainer/: devcontainer.json
custom_components/babybuddy/: __init__.py  binary_sensor.py  button.py  client.py  config_flow.py  const.py  coordinator.py  discovery.py  entity.py  errors.py  manifest.json  repairs.py  select.py  sensor.py  services.py  services.yaml  strings.json
custom_components/babybuddy/frontend/: __init__.py  babybuddy-card.js
custom_components/babybuddy/translations/: pt.json
frontend_src/: package-lock.json  package.json  timer-ui-showcase.html  tsconfig.json  vite.config.ts
frontend_src/src/: babybuddy-card.ts  types.ts  utils.ts
frontend_src/src/components/: action-buttons.ts  action-dialog.ts  activity-chips.ts  child-header.ts  timer-bar.ts
scripts/: build-card  develop  setup
scripts/mcp_server/: __main__.py  config.py
scripts/mcp_server/tools/: babybuddy.py  ha.py  mqtt.py
tests/: conftest.py  const.py  test_config_flow.py  test_init.py  test_sensor.py  test_switch.py
