[project]
name = "ha-babybuddy"
version = "0.0.0"
requires-python = ">=3.13"
dependencies = [
    "homeassistant",
]

[tool.setuptools]
packages = []

[project.optional-dependencies]
dev = [
    "colorlog",
    "hassil",
    "home-assistant-frontend",
    "ruff",
    "pytest",
    "pytest-homeassistant-custom-component",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",       # docstrings -- not enforced yet
    "E501",    # line length -- handled by formatter
    "PLR0913", # too many arguments
    "TRY003",  # long exception messages
    "COM812",  # trailing comma -- conflicts with formatter
    "ISC001",  # implicit string concat -- conflicts with formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PLR2004"]

[tool.ruff.lint.isort]
known-first-party = ["custom_components.babybuddy"]
